# tensor-factory

./: .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  DATATYPES.md  MODEL_SIZE.md  PROMPT.md  Quickstart  README.md  SAMPLES.md  SECURITY.md  TODO.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automerge.yml  ci.yml  codeql.yml  dependabot-automerge.yml  dependency-review.yml
docs/: api.html  architecture.html  cli.html  dataset-guide.html  demo.html  getting-started.html  index.html  pipeline.html  style.css
docs/models/: helicoil-mock-v1.onnx
examples/helicoils/: README.md  SAMPLES.md  relabel.sh
examples/helicoils/scripts/: build_real_video_ds.py  cors_server_dualstack.py  extract_frames.py
examples/pets-validation/: convert.py
scripts/: cors_server.py  run-bg  worktree
studio/: .gitignore  PROMPT.md  README.md  index.html  studio.css
studio/e2e/: README.md  run.sh  studio.e2e.mjs
studio/e2e/fixtures/: sample.webm
studio/js/: app.js  canvas.js  codec.js  dhash.js  export.js  keymap.js  store.js  toast.js  trainer.js  trainer.worker.js  video.js
studio/tests/: codec.test.mjs  dhash.test.mjs  export.test.mjs  keymap.test.mjs  trainer.test.mjs  video.test.mjs
tests/: test_demo.py  test_demo_browser.py
