[project]
name = "tensor-factory-workspace"
version = "0"
description = "Workspace root for the tensor-factory monorepo"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "ruff>=0.6",
    "ty",
    # Inference runtime + ONNX fixtures so the gate exercises the detector.
    # torch is intentionally NOT here: training is a heavy offline step, run via
    # the tensor-factory-train 'train' extra, not part of CI.
    "onnxruntime>=1.17",
    "numpy>=1.24",
    "onnx>=1.16",
]

[tool.ruff]
line-length = 100
src = ["packages/*/src", "packages/*/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch real external resources",
]
